[package]
name = "grit-data-prison"
description = "A crate providing the struct Prison<T>, a Generational Arena that allows full interior mutability to each and every element"
version = "0.4.0"
edition = "2021"
authors = ["Gabriel Lee Anderson <gla.ander@gmail.com>"]
repository = "https://github.com/gabe-lee/grit-data-prison.git"
license = "BSD-3-Clause"
keywords = ["arena", "interior-mutability", "generational-arena"]
categories = ["data-structures", "no-std", "memory-management", "rust-patterns"]

[dependencies]

[features]
major_malf_is_err = []
major_malf_is_panic = []
major_malf_is_undefined = []
no_std = []

[package.metadata.scripts]
test-coverage = """\
  CARGO_INCREMENTAL=0 RUSTFLAGS='-Cinstrument-coverage' LLVM_PROFILE_FILE='cargo-test-%p-%m.profraw' cargo test && \
  grcov . --binary-path ./target/debug/deps/ -s . -t lcov,html --branch --ignore-not-existing --ignore '../*' --ignore '/*' --ignore '**/tests.rs' --excl-line '//COV_IGNORE' -o target/coverage ; \
  rm cargo-test-*.profraw \
  """
